--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,21 @@ h1 {
   max-height: 65vh;
   overflow-y: auto;
   position: absolute;
-  z-index: 999; /* Asegura que el contenedor esté en la capa superior */
+}
+
+.ButtonsAdminContainer {
+  text-align: center;
+  width: 50vw;
+}
+
+.labelCircle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #72b9a9;
+  border-radius: 100px;
+  width: 200px;
+  height: 200px;
 }
 
 .malla {
@@ -86,6 +100,15 @@ h1 {
   text-align: left;
   align-items: center;
   padding: 10px;
+}
+
+.columnaDerechaImageButton {
+  display: flex;
+  justify-content: left;
+  text-align: left;
+  align-items: center;
+  padding: 10px;
+  width: 60vh;
 }
 
 .fullscreenCard {
@@ -134,6 +157,30 @@ h1 {
   transition: 0.3s;
 }
 
+.ButtonNavImage {
+  cursor: pointer;
+  font-family: "Madimi One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #c11612;
+  font-size: 25px;
+  background-color: rgba(0,0,0,0);
+  border-width: 0px 0px 0px 0px;
+  margin-bottom: 5px;
+}
+
+.icons {
+  width: 100px;
+  height: 100px;
+  color: white;
+}
+
+.ButtonNavImage:hover {
+  font-size: 30px;
+  color: #72b9a9;
+  transition: 0.3s;
+}
+
 .Button {
   cursor: pointer;
   background-color: #72b9a9;
@@ -152,4 +199,106 @@ h1 {
     background-color: #c11612;
     color: white;
     width: 40%;
+}
+
+.logoAdminContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50vw; /* vw significa viewport width */
+}
+
+.contentAdminContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50vw; /* vw significa viewport width */
+}
+
+.logo2 {
+  background-image: url('./images/logo.png');
+  background-repeat: no-repeat; 
+  background-position: center; 
+  padding: 25px;
+  border-radius: 5px;
+  width: 200px; 
+  height: 200px;
+  position: absolute;
+  top: 50%;
+}
+
+.Logout {
+  position: absolute; 
+  top: 0;
+  right: 0;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.Btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: #c11612;
+}
+
+/* plus sign */
+.sign {
+  width: 100%;
+  transition-duration: .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign svg {
+  width: 17px;
+}
+
+.sign svg path {
+  fill: white;
+}
+/* text */
+.text {
+  position: absolute;
+  margin-left: 5px;
+  right: 0%;
+  width: 0%;
+  opacity: 0;
+  color: white;
+  font-size: 1.2em;
+  font-weight: 600;
+  transition-duration: .3s;
+}
+/* hover effect on button width */
+.Btn:hover {
+  width: 140px;
+  border-radius: 40px;
+  transition-duration: .3s;
+}
+
+.Btn:hover .sign {
+  width: 30%;
+  transition-duration: .3s;
+  padding-left: 20px;
+}
+/* hover effect button's text */
+.Btn:hover .text {
+  opacity: 1;
+  width: 70%;
+  transition-duration: .3s;
+  padding-right: 10px;
+}
+/* button click effect*/
+.Btn:active {
+  transform: translate(2px ,2px);
 }
