--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,17 @@ h1 {
   align-items: center;
 }
 
+.ContainerFull{
+  background-image: url('./images/fondo3.jpg');
+  background-size: cover; 
+  background-position: center; 
+  width: 100vw; 
+  height: 100vh; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
 .centerCircle{
   position: absolute;
   top: 10%;
@@ -117,13 +128,13 @@ h1 {
 }
 
 .fullscreenCard {
-  background-color: white;
+  background-color: #c11612;
   padding: 30px;
   text-align: center;
   width: 100vw;
   height: 83vh;
   overflow-y: auto;
-  margin-top: 12vh;
+  margin-top: 30vh;
 }
 
 .InputContainer{
@@ -254,6 +265,20 @@ h1 {
   height: 200px;
   position: absolute;
   top: 50%;
+}
+
+.logo3 {
+  background-image: url('./images/logo3.png');
+  background-repeat: no-repeat; 
+  background-position: center; 
+  padding: 25px;
+  border-radius: 5px;
+  width: 200px; 
+  height: 200px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 45px;
 }
 
 .Logout {
