--- a/src/index.css
+++ b/src/index.css
@@ -99,8 +99,8 @@ h1 {
   align-items: center;
   background-color: #72b9a9;
   border-radius: 100px;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
 }
 
 .circleLevels{
@@ -262,6 +262,8 @@ h1 {
   width: 15%;
   transition: 0.3s;
   margin-top: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .ButtonRegresar:hover{
