--- a/src/index.css
+++ b/src/index.css
@@ -539,7 +539,7 @@ th{
 
 .date-select {
   background-color: white;
-  border: 2px solid red;
+  border: 2px solid #c11612;
   padding: 5px;
   font-size: 16px;
   border-radius: 5px;
@@ -552,6 +552,24 @@ th{
 .date-select option {
   color: black;
   background-color: white;
+}
+
+.select{
+  background-color: white;
+  border-color: #c11612;
+  padding: 5px;
+  border-width: 2px 2px 2px 2px;
+  border-radius: 50px;
+  outline: none;
+  transition: 0.3s;
+}
+
+.select:hover{
+  border-color: #72b9a9;
+}
+
+.opcion{
+  padding-left: 20px;
 }
 
 .labelFecha{
@@ -598,6 +616,11 @@ th{
   align-items: center;
   color: red;
   font-size: 18px;
+}
+
+.mallaBotones{
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
 
