--- a/src/index.css
+++ b/src/index.css
@@ -536,6 +536,42 @@ th{
   transition: 0.3s;
 }
 
+.btn-upload{
+  cursor: pointer;
+  background-color: #177cff;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  border: none;
+  font-size: 20px;
+  color: white;
+}
+
+.btn-upload:hover{
+  width: 35px;
+  height: 35px;
+  transition: 0.3s;
+}
+
+.btn-ver{
+  cursor: pointer;
+  background-color: #72b9a9;
+  border-radius: 40%;
+  width: 40px;
+  height: 30px;
+  border: none;
+  font-size: 15px;
+  font-weight: bold;
+  color: white;
+  margin-left: 5px;
+}
+
+.btn-ver:hover{
+  width: 45px;
+  height: 35px;
+  transition: 0.3s;
+}
+
 .eyes{
   margin-left: 5px;
   color: #c11612;
