--- a/src/index.css
+++ b/src/index.css
@@ -557,18 +557,17 @@ th{
   cursor: pointer;
   background-color: #72b9a9;
   border-radius: 40%;
-  width: 40px;
-  height: 30px;
   border: none;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: bold;
   color: white;
   margin-left: 5px;
+  padding: 5px;
+  text-decoration: none;
 }
 
 .btn-ver:hover{
-  width: 45px;
-  height: 35px;
+  font-size: 20px;
   transition: 0.3s;
 }
 
