--- a/src/index.css
+++ b/src/index.css
@@ -804,3 +804,67 @@ th{
   text-decoration: line-through;
 }
 
+/* Contenedor del formulario (centrado y encima de la tabla) */
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 20px; /* Agrega espacio entre el formulario y la tabla */
+}
+
+/* Contenedor del formulario */
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 1250px;
+
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Fila de los inputs */
+.form-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+  width: 100%;
+}
+
+.form-row > * {
+  flex: 1;
+  min-width: 250px;
+}
+
+/* Contenedor del botón */
+.button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+/* Botón */
+.ButtonRegresar {
+  padding: 10px 20px;
+}
+
+
+.ButtonBuscar {
+  cursor: pointer;
+  background-color: #72b9a9;
+  padding: 10px;
+  border-radius: 50px;
+  border-color: #72b9a9;
+  color: white;
+  font-weight: 600;
+  font-size: 17px;
+  width: 15%;
+  transition: 0.3s;
+}
+
+.ButtonBuscar:hover{
+  width: 20%;
+}
