--- a/src/index.css
+++ b/src/index.css
@@ -105,8 +105,8 @@ h1 {
   align-items: center;
   background-color: #72b9a9;
   border-radius: 100px;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 }
 
 .circleLevels{
@@ -115,8 +115,8 @@ h1 {
   align-items: center;
   background-color: #72b9a9;
   border-radius: 100px;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   color: white;
   text-decoration: none;
   font-size: 25px;
@@ -267,8 +267,8 @@ h1 {
 }
 
 .icons {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   color: white;
 }
 
@@ -895,3 +895,50 @@ th{
 .timerContainer{
   margin-right: 20px;
 }
+
+.headerContainer {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 30px;
+  margin-bottom: 90px;
+}
+
+.buttonGroup {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.notificationButton {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  background-color:#72b9a9;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.notificationButton:hover {
+  background-color:#2e8570;
+}
+
+.notificationBadge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 3px 7px;
+  border-radius: 50%;
+  min-width: 20px;
+  text-align: center;
+}
+
