--- a/src/index.css
+++ b/src/index.css
@@ -928,6 +928,7 @@ th{
 }
 
 .notificationButton {
+  margin-top: 100px;
   position: relative;
   display: flex;
   align-items: center;
@@ -1048,3 +1049,36 @@ th{
   cursor: pointer;
   user-select: none;
  } 
+
+ .modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: white;
+  padding: 2rem;
+  border-radius: 10px;
+  width: 80%;
+  max-width: 800px;
+  max-height: 90%;
+  overflow: auto;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+}
+
+.btn-cerrar {
+  margin-top: 1rem;
+  background-color: #444;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+}
