--- a/src/index.css
+++ b/src/index.css
@@ -1129,3 +1129,66 @@ th{
   margin-bottom: 0px;
   margin-top: 20px;
 }
+
+.helpButton {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background: none;
+  border: none;
+  color: #333; /* o el color que encaje con tu diseño */
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.helpButton:hover {
+  color: #c11612; /* cambia a color hover si quieres */
+}
+
+.about-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 10px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.about-button:hover {
+  background-color: #2e8570;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 24px;
+  border-radius: 12px;
+  max-width: 1000px;
+  text-align: center;
+}
+
+.modal-content button {
+  margin-top: 16px;
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
